change log config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.servlet.multipart.max-request-size=50MB
 # ================================================================
 #     log
 # ================================================================
-logging.file.name=/data/${spring.application.name}/${spring.application.name}.log
+logging.file.name=/Users/changzhenya/logs/${spring.application.name}/${spring.application.name}.log
 logging.file.max-size=64MB
 logging.file.max-history=64
 logging.level.com.alibaba.nacos=ERROR
