--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,15 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- ******************** -->
+        <!-- rocketmq -->
+        <!-- ******************** -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
         <!-- ******************************** -->
         <!-- aliyun OSS -->
         <!-- ******************************** -->
